--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Tic Tac Toe</title>
 </head>
 
 <body>
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+
+    <div class="gameBoard">
+        <button class="field" data-index="0"></button>
+        <button class="field" data-index="1"></button>
+        <button class="field" data-index="2"></button>
+        <button class="field" data-index="3"></button>
+        <button class="field" data-index="4"></button>
+        <button class="field" data-index="5"></button>
+        <button class="field" data-index="6"></button>
+        <button class="field" data-index="7"></button>
+        <button class="field" data-index="8"></button>
+    </div>
 
 </body>
+
+<script src="./app.js"></script>
 
 </html>
